show data in a table

--- a/src/VisualizeHealthData.Web/VisualizeHealthData.Web/VisualizeHealthData.Web.csproj
+++ b/src/VisualizeHealthData.Web/VisualizeHealthData.Web/VisualizeHealthData.Web.csproj
@@ -156,7 +156,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Record.cs" />
+    <Compile Include="Models\Domain\Record.cs" />
+    <Compile Include="Models\Domain\RecordSource.cs" />
+    <Compile Include="Models\Domain\RecordType.cs" />
+    <Compile Include="Models\ViewModels\RecordOverviewViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
